Fixed overflow

--- a/src/routes/Examples/Examples.scss
+++ b/src/routes/Examples/Examples.scss
@@ -4,6 +4,7 @@
   .iframe-container {
     height: 80vh;
     flex: 1;
+    overflow: hidden;
 
     .prism-code {
       margin: 0;
